tests/paczka1/fuzzy1/30485957.err
Error in line 7: VTQ7SIW3qeK S143 40,1
Error in line 32: lPqZ1t S143 386,7
Error in line 31: VTQ7SIW3qeK A124 118,8
